# edp-hmss-starter

./: .bazelignore  .bazelrc  MODULE.bazel  WORKSPACE  maven_install.json
src/edp/: BUILD.bazel  EdpClient.kt
src/main/edp/: BUILD.bazel  EdpClient.kt
src/test/edp/: BUILD.bazel  EdpClientTest.kt
