module(
    name = "edp-hmss-starter",
    repo_name = "edp_hmss_starter",
)

BORINGSSL_VERSION = "0.0.0-20230215-5c22014"

#  --- WFA registry modules. ---

# Must come before rules_kotlin due to toolchain resolution precedence.
# See https://github.com/bazelbuild/bazel/discussions/23075.
bazel_dep(
    name = "rules_kotlin_jvm",
    version = "0.4.0",
    repo_name = "wfa_rules_kotlin_jvm",
)
bazel_dep(
    name = "cross-media-measurement-api",
    version = "0.70.0",
    repo_name = "wfa_measurement_proto",
)
bazel_dep(
    name = "any-sketch",
    version = "0.9.1",
    repo_name = "any_sketch",
)
bazel_dep(
    name = "any-sketch-java",
    version = "0.7.0",
    repo_name = "any_sketch_java",
)

# --- Bazel Central Registry modules. ---
bazel_dep(
    name = "rules_jvm_external",
    version = "6.4",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        # OCMM
        "org.wfanet.measurement.eventdataprovider:shareshuffle-v2alpha:0.5.13",
        "org.wfanet.measurement.eventdataprovider:shareshuffle-native:0.5.13",
        "org.wfanet.measurement.api:v2alpha-kotlin:0.5.13",
        "org.wfanet.measurement.api:v2alpha-grpc-kotlin:0.5.13",
        # Test
        "junit:junit:4.13.2",
    ],
    fail_if_repin_required = True,
    fetch_sources = True,  # For IDE integration.
    lock_file = "//:maven_install.json",
    repositories = [
        "https://maven.pkg.github.com/world-federation-of-advertisers/cross-media-measurement",
        "https://repo1.maven.org/maven2",
    ],
    resolver = "maven",
    strict_visibility = True,
)
use_repo(maven, "maven")

# Force use of newer version of boringssl.
single_version_override(
    module_name = "boringssl",
    version = BORINGSSL_VERSION,
)
